Features/LoadBoardForCarrier/force-app/main/default/objects/Load_Board_Bid_Request__e/Load_Board_Bid_Request__e.object-meta.xml
<CustomObject>
    <label>Load Board Bid Request</label>
    <pluralLabel>Load Board Bid Requests</pluralLabel>
</CustomObject>