Features/LoadBoardForCarrier/force-app/main/default/objects/Load_Board_Bid_Request__e/fields/Load_ID__c.field-meta.xml
<CustomField>
    <fullName>Load_ID__c</fullName>
    <label>Load ID</label>
    <length>250</length>
    <type>Text</type>
</CustomField>