Features/LoadBoardForCarrier/force-app/main/default/objects/Load_Board_Bid_Request__e/fields/Requested_At__c.field-meta.xml
<CustomField>
    <fullName>Requested_At__c</fullName>
    <label>Requested At</label>
    <type>DateTime</type>
</CustomField>