Features/LoadBoardForCarrier/force-app/main/default/objects/Load_Board_Bid_Request__e/fields/Transit_Time__c.field-meta.xml
<CustomField>
    <fullName>Transit_Time__c</fullName>
    <label>Transit Time</label>
    <length>50</length>
    <type>Text</type>
</CustomField>