Features/LoadBoardForCarrier/force-app/main/default/objects/Load_Board_Bid_Request__e/fields/Transition_Date__c.field-meta.xml
<CustomField>
    <fullName>Transition_Date__c</fullName>
    <label>Transition Date</label>
    <type>DateTime</type>
</CustomField>